[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "py-pcalg"
version = "0.2.0"
description = "Lightweight PC algorithm for causal skeleton discovery from observational data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "fooSynaptic" }]
keywords = ["causal-discovery", "pc-algorithm", "causal-inference", "structure-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "matplotlib>=3.3",
    "networkx>=2.5",
    "numpy>=1.19",
    "pandas>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
pcalg = "pcalg.cli:main"

[project.urls]
Homepage = "https://github.com/fooSynaptic/py_pcalg"
Repository = "https://github.com/fooSynaptic/py_pcalg"

[tool.setuptools.packages.find]
where = ["."]
include = ["pcalg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
